# easyPhysi

./: README-pypi.md  README.md  requirements.txt  setup.cfg  utils.py
drivers/: body.py  body_numeric.py  equation.py  field.py  scalar.py  system.py  tuple.py  universe.py
easyPhysi/drivers/: body.py  system.py  universe.py
easyPhysi/equations/: electrical_field_intensity_equation.py  electrical_force_equation.py  energy_conservation_equation.py  gravitational_field_intensity_equation.py  gravitational_force_equation.py  gravitational_potential_equation.py  linear_velocity_equation.py  newton_equation.py
equations/: electrical_field_intensity_equation.py  electrical_force_equation.py  electrical_potential_energy_equation.py  electrical_potential_equation.py  energy_equation.py  energy_law.py  gravitation_law.py  gravitational_field_intensity_equation.py  gravitational_field_intensity_law.py  gravitational_force_equation.py  gravitational_force_law.py  gravitational_potential_energy_equation.py  gravitational_potential_energy_law.py  gravitational_potential_equation.py  gravitational_potential_law.py  linear_movement.py  linear_position_equation.py  linear_position_law.py  linear_velocity_equation.py  linear_velocity_law.py  newton_equation.py  newton_law.py
pyphysics/: __init__.py  utils.py
tests/: test_body.py  test_electric.py  test_electrical.py  test_energy.py  test_equation.py  test_gravitational.py  test_gravity.py  test_mrua.py  test_newton.py  test_scalar.py  test_system.py  test_tuple.py  test_uarm.py  test_universe.py  test_utils.py  test_vector.py
(+21 files in other folders)
