
[metadata]
name = pyphysics
version = 1.0.0
author ='Carles Mesado'  
author_email = 'mesado31@gmail.com'
description = 'Physics library to solve pre-universitary physics problems'
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = {keywords}
requires_dist = setuptools

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = find:
test_suite = tests
setup_requires =
    setuptools
install_requires =
	matplotlib>=3.5.0
	scipy>=1.11.0
	sympy==1.12

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests 
    test_resources
